chore: refactor JPA entities and mappers for improved structure and clarity